--- a/src/app/portfolio-page/portfolio-page.component.css
+++ b/src/app/portfolio-page/portfolio-page.component.css
@@ -1,16 +1,28 @@
 .container-fluid {
-  padding-left: 60px!important;
-  padding-right: 60px!important;
+  padding-left: 25px !important;
+  padding-right: 25px !important;
   height: 100%;
 }
-
+.cur-nav-item {
+  font-family: quantum;
+  letter-spacing: 2px;
+  font-size: 4rem;
+  color: white;
+}
+.nav-arrow {
+  width: 2em;
+  margin-top: -1.8em;
+  margin-left: 1.5em;
+}
+.navbar-mobile-button:hover {
+}
 .title-bg {
-  background-image: url("../../assets/bannerWEBP.webp");
+  background-image: url("../../assets/banner_mobile.png");
   background-color: #000000;
-  background-size:     contain;                      /* <------ */
-  background-repeat:   no-repeat;
-  background-position: top center;              /* optional, center the image */
-  height: 11.3em;
+  background-size: contain; /* <------ */
+  background-repeat: no-repeat;
+  background-position: top center; /* optional, center the image */
+  height: 5em;
   width: 100%;
 }
 .title {
@@ -21,34 +33,35 @@
   margin-top: 0.2em;
   margin-bottom: 0.1em;
   letter-spacing: 2px;
-  color: black!important;
+  color: black !important;
 }
 .title:hover {
   color: black;
   text-decoration: none;
 }
 .navbar {
-  background-color: #000000!important;
+  background-color: #000000 !important;
   font-family: quantum;
   letter-spacing: 2px;
-
 }
 .nav-item {
   font-size: 2.75rem;
-
 }
 .nav-item:hover {
   cursor: pointer;
 }
 .navbar-dark .navbar-nav .nav-link {
-  color:white;
+  color: white;
 }
-.navbar-dark .navbar-nav .active>.nav-link, .navbar-dark .navbar-nav .nav-link.active, .navbar-dark .navbar-nav .nav-link.show, .navbar-dark .navbar-nav .show>.nav-link {
-  color:rgb(192, 192, 192);
+.navbar-dark .navbar-nav .active > .nav-link,
+.navbar-dark .navbar-nav .nav-link.active,
+.navbar-dark .navbar-nav .nav-link.show,
+.navbar-dark .navbar-nav .show > .nav-link {
+  color: rgb(192, 192, 192);
 }
 
 .navbar-dark .navbar-nav .nav-link:hover {
-  color:rgb(192, 192, 192);
+  color: rgb(192, 192, 192);
 }
 
 .row {
@@ -85,7 +98,7 @@
   }
 } */
 .picture {
-  padding-bottom: 30px;
+  padding-bottom: 20px;
 }
 .picture:hover {
   opacity: 0.7;
@@ -93,19 +106,22 @@
 }
 .modal-content {
   position: fixed;
-    top: 50%;
-    left: 50%;
-    max-height: 800px;
-    width: auto;
-    -moz-transform: translateX(-50%) translateY(-50%);
-    -webkit-transform: translateX(-50%) translateY(-50%);
-    transform: translateX(-50%) translateY(-50%);
-    z-index: 2000;
+  top: 50%;
+  left: 50%;
+  max-height: 400px;
+  width: auto;
+  -moz-transform: translateX(-50%) translateY(-50%);
+  -webkit-transform: translateX(-50%) translateY(-50%);
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 2000;
+}
+.hor-height {
+  max-height: 220px;
 }
 .full {
   position: fixed;
-  top:0;
-  left:0;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: 1000;
@@ -113,19 +129,20 @@
   opacity: 0.9;
   overflow: hidden;
 }
-.sticky{
+.sticky {
   position: fixed;
   top: 0;
   overflow: hidden;
   z-index: 10;
   width: 100%;
   left: 0;
+  padding: unset;
 }
-.animateIn{
+.animateIn {
   transition: all 300ms ease-in-out;
   transform: translateY(0px);
 }
-.animateOut{
+.animateOut {
   transition: all 300ms ease-in-out;
   transform: translateY(-100%);
 }
@@ -135,4 +152,30 @@
 }
 .pushed {
   margin-top: 98px;
+}
+/* computer */
+@media (min-width: 1000px) {
+  .title-bg {
+    background-image: url("../../assets/bannerWEBP.webp");
+    height: 11em;
+  }
+  .navbar-mobile-button {
+    display: none;
+  }
+  .navbar-container {
+    display: contents;
+  }
+  .sticky {
+    padding: .5rem 1rem;
+  }
+  .container-fluid {
+    padding-left: 60px !important;
+    padding-right: 60px !important;
+  }
+  .picture {
+    padding-bottom: 30px;
+  }
+  .modal-content {
+    max-height: 800px;
+  }
 }
